# liblog

./: .gitignore  Makefile.am  README.md  configure.ac
gentoo/: liblog-9999.ebuild
src/: liblog.h  liblog.pc.in  log.c  log.h
test/: test.c
